core/src/button/outset.module.css
.main {
	transition: background-color 0.1s, box-shadow 0.1s, outline 0.2s ease-out;
	border: solid 1px transparent;
	font-weight: 450;

	--shadow-size: 0px 0.5px 2px;
	--inset-shadow: inset 0px 1px 0px;
}

:global(.group-tail) .main {
	border-left: none;
}

/* BASE COLOR */

:global(.light) .main {
	--shadow: var(--shadow-size) rgba(0, 0, 0, 0.1);
	background-color: var(--gray-1);
	box-shadow: var(--shadow), var(--inset-shadow) var(--gray-0);
	border-color: var(--gray-3);
}
:global(.light) .main:hover {
	background-color: var(--gray-0);
}
:global(.light) .main:active {
	background-color: var(--gray-2);
	box-shadow: none;
}

:global(.dark) .main {
	--shadow: var(--shadow-size) rgba(0, 0, 0, 0.3);
	background-color: var(--gray-7);
	box-shadow: var(--shadow), var(--inset-shadow) var(--gray-6);
	border-color: var(--gray-10);
}
:global(.dark) .main:hover {
	background-color: var(--gray-6);
}
:global(.dark) .main:active {
	background-color: var(--gray-9);
	box-shadow: none;
}

/* HIGHLIGHT */

:global(.light) .highlight {
	--shadow: var(--shadow-size) rgba(0, 0, 0, 0.2);
	color: var(--gray-1);
	background-color: var(--blue-5);
	box-shadow: var(--shadow), var(--inset-shadow) var(--blue-4);
	border-color: var(--blue-7);
}
:global(.light) .highlight:hover {
	background-color: var(--blue-4);
}
:global(.light) .highlight:active {
	background-color: var(--blue-6);
}

:global(.dark) .highlight {
	color: var(--gray-0);
	background-color: var(--blue-5);
	box-shadow: var(--shadow), var(--inset-shadow) var(--blue-4);
	border-color: var(--gray-10);
}
:global(.dark) .highlight:hover {
	background-color: var(--blue-4);
}
:global(.dark) .highlight:active {
	background-color: var(--blue-6);
	box-shadow: none;
}

/* SELECTED */

:global(.light) .selected:not(.win-pseudo) {
	background-color: var(--gray-2);
	box-shadow: 0px 0px 0px transparent;
}

:global(.light) .highlight.selected:not(.win-pseudo) {
	background-color: var(--blue-6);
	box-shadow: 0px 0px 0px transparent;
}

:global(.dark) .selected,
:global(.dark) .selected:hover,
:global(.dark) .selected:active {
	background-color: var(--gray-9);
	box-shadow: 0px 0px 0px transparent;
}

:global(.dark) .highlight.selected,
:global(.dark) .highlight.selected:hover,
:global(.dark) .highlight.selected:active {
	background-color: var(--blue-6);
	box-shadow: 0px 0px 0px transparent;
}

/* DISABLED */

:global(.light) .main:not(.busy):disabled {
	color: var(--gray-5);
	box-shadow: none;
	background-color: var(--gray-1);
	border-color: var(--gray-2);
}
:global(.dark) .main:not(.busy):disabled {
	color: var(--gray-4);
	background-color: var(--gray-7);
	box-shadow: none;
	border-color: var(--gray-9);
}

